<resources>
    <string name="app_name">MiniProject2</string>
    <string name="name_app">Music</string>
    <string name="search">Search</string>
    <string name="setting">Cài Đặt</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="songs">Song</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="name_app1">Play</string>
    <string name="title">Music Player</string>
    <string name="hint_search">tìm kiếm...</string>
    <string name="my_music">My Music</string>
    <string name="user_name">lnthe54</string>
    <string name="type_account">FREE</string>
    <string name="log_out">Đăng Xuất</string>
    <string name="other">Other</string>
    <string name="song">Bài Hát</string>
    <string name="artist">Ca Sĩ</string>
    <string name="favourite">Nhạc Yêu Thích</string>
    <string name="shuffle">Nghe Ngẫu Nhiên</string>
    <string name="grid">Grid</string>
    <string name="expand">Expand</string>
    <string name="share">Share</string>
    <string name="facebook">Facebook</string>
    <string name="gmail">Gmail</string>
    <string name="twitter">Twitter</string>
    <string name="skype">Skype</string>
    <string name="message">Message</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="cancel">Hủy</string>
    <string name="infor_song">Thông tin bài hát</string>
    <string name="add_favourite">Thêm vào danh sách yêu thích</string>
    <string name="setting_music">Cài làm nhạc chuông</string>
    <string name="delete_song">Xóa khỏi bộ nhớ</string>
</resources>
