<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/ic_song"
            android:icon="@drawable/ic_music"
            android:title="@string/song" />
        <item
            android:id="@+id/ic_album"
            android:icon="@drawable/ic_album"
            android:title="@string/albums" />
        <item
            android:id="@+id/ic_artist"
            android:icon="@drawable/ic_artist"
            android:title="@string/artist" />
        <item
            android:id="@+id/icon_list_favourite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favourite" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/ic_setting"
                android:icon="@drawable/ic_settings"
                android:title="@string/setting" />
            <item
                android:id="@+id/ic_log_out"
                android:icon="@drawable/ic_log_out"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>