<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_share"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:padding="10dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:id="@+id/tv_share_to"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Share to"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layout_row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_share_to"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_facebook"
            style="@style/itemShare"
            android:drawableTop="@drawable/facebook_logo"
            android:text="@string/facebook" />

        <TextView
            android:id="@+id/tv_gmail"
            style="@style/itemShare"
            android:drawableTop="@drawable/gmail_logo"
            android:text="@string/gmail" />

        <TextView
            android:id="@+id/tv_twitter"
            style="@style/itemShare"
            android:drawableTop="@drawable/twitter_logo"
            android:text="@string/twitter" />

        <TextView
            android:id="@+id/tv_skype"
            style="@style/itemShare"
            android:drawableTop="@drawable/skype_logo"
            android:text="@string/skype" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_row1"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="4">

        <TextView
            android:id="@+id/tv_message"
            style="@style/itemShare"
            android:drawableTop="@drawable/message_logo"
            android:text="@string/message" />

        <TextView
            android:id="@+id/bluetooth"
            style="@style/itemShare"
            android:drawableTop="@drawable/bluetooth_logo"
            android:text="@string/bluetooth" />
    </LinearLayout>

</RelativeLayout>