<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_song_more"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#e8e8e8"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/iv_song"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            app:riv_corner_radius="5dp"
            app:riv_mutate_background="true" />

        <TextView
            android:id="@+id/tv_name_song"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/iv_song"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/tv_artist_song"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_name_song"
            android:layout_below="@id/tv_name_song"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="5dp"
            android:ellipsize="end"
            android:maxLines="1" />
    </RelativeLayout>

    <TextView
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/ic_favorite"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/add_favourite"
        android:textColor="@color/colorBlack" />

    <TextView
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/ic_notifications"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/setting_music"
        android:textColor="@color/colorBlack" />

    <TextView
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/ic_delete"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/delete_song"
        android:textColor="@color/colorBlack" />
</LinearLayout>